syntax = "proto3";

package kne.wire;

// Build with:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/wire.proto

// The Go package name is the version.
option go_package = "github.com/google/kne/proto/wire";

message Pod {
  string name = 1;
  string src_ip = 2;
  string net_ns = 3;
  string kube_ns = 4;
  repeated Link links = 5;
}

message Link {
  string peer_pod = 1;
  string local_intf = 2;
  string peer_intf = 3;
  string local_ip = 4;
  string peer_ip = 5;
  int64 uid = 6;
}

message PodQuery {
  string name = 1;
  string kube_ns = 2;
}

message SkipQuery {
  string pod = 1;
  string peer = 2;
  string kube_ns = 3;
}

message BoolResponse {
  bool response = 1;
}

message RemotePod {
    string net_ns = 1;
    string intf_name = 2;
    string intf_ip = 3;
    string peer_vtep = 4;
    string kube_ns = 5;
    int64 vni = 6;
}

service Local {
  rpc Get (PodQuery) returns (Pod);
  rpc SetAlive (Pod) returns (BoolResponse);
  rpc SkipReverse (SkipQuery) returns (BoolResponse);
  rpc Skip (SkipQuery) returns (BoolResponse);
  rpc IsSkipped (SkipQuery) returns (BoolResponse);
}

service Remote {
  rpc Update (RemotePod) returns (BoolResponse);
}